--- a/text_VAE_v18.ipynb
+++ b/text_VAE_v18.ipynb
@@ -3,7 +3,15 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
+      "metadata": {
+        "noteable": {
+          "output_collection_id": "756ce696-59a0-4190-a63b-afca8e410a7f"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-01T23:49:57.634696+00:00",
+          "start_time": "2023-07-01T23:49:57.115636+00:00"
+        }
+      },
       "outputs": [],
       "source": [
         "from keras.layers import Bidirectional, Dense, Embedding, Input, Lambda, LSTM, RepeatVector, TimeDistributed, Layer, Activation, Dropout\n",
@@ -488,6 +496,10 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.3"
+    },
+    "selected_hardware_size": "small",
+    "noteable": {
+      "last_transaction_id": "ecd48d2b-6384-4f54-93bc-80b2ec3c545f"
     }
   },
   "nbformat": 4,
