--- a/text_VAE_v18.ipynb
+++ b/text_VAE_v18.ipynb
@@ -1,15 +1,36 @@
 {
   "cells": [
     {
+      "id": "189fdde1-11e9-4d11-a7fd-af77f4a9e43b",
+      "cell_type": "code",
+      "metadata": {
+        "jupyter": {
+          "outputs_hidden": false,
+          "source_hidden": false
+        },
+        "noteable": {
+          "cell_type": "code",
+          "output_collection_id": "bc697227-9542-46a8-827b-7df695aae668"
+        },
+        "ExecuteTime": {
+          "end_time": "2023-07-01T23:52:09.107931+00:00",
+          "start_time": "2023-07-01T23:52:03.544995+00:00"
+        }
+      },
+      "execution_count": null,
+      "source": "pip install keras",
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "noteable": {
-          "output_collection_id": "756ce696-59a0-4190-a63b-afca8e410a7f"
+          "output_collection_id": "48b088b3-05d0-42bc-b3e4-5d15556caf01"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-01T23:49:57.634696+00:00",
-          "start_time": "2023-07-01T23:49:57.115636+00:00"
+          "end_time": "2023-07-01T23:52:13.709761+00:00",
+          "start_time": "2023-07-01T23:52:13.126655+00:00"
         }
       },
       "outputs": [],
@@ -499,7 +520,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "ecd48d2b-6384-4f54-93bc-80b2ec3c545f"
+      "last_transaction_id": "1562e134-e3b1-47e0-a5cc-2d19610cdeb4"
     }
   },
   "nbformat": 4,
