Commit from Noteable
Updating project file cache

--- a/text_VAE_v18.ipynb
+++ b/text_VAE_v18.ipynb
@@ -10,15 +10,12 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "bc697227-9542-46a8-827b-7df695aae668"
+          "output_collection_id": "c8551f76-2e3f-410c-83dc-b4ac882b422d"
         },
-        "ExecuteTime": {
-          "end_time": "2023-07-01T23:52:09.107931+00:00",
-          "start_time": "2023-07-01T23:52:03.544995+00:00"
-        }
+        "ExecuteTime": null
       },
       "execution_count": null,
-      "source": "pip install keras",
+      "source": "pip install keras tensorflow",
       "outputs": []
     },
     {
@@ -26,7 +23,7 @@
       "execution_count": null,
       "metadata": {
         "noteable": {
-          "output_collection_id": "48b088b3-05d0-42bc-b3e4-5d15556caf01"
+          "output_collection_id": "3528dcfb-3694-443a-a69c-884097274154"
         },
         "ExecuteTime": {
           "end_time": "2023-07-01T23:52:13.709761+00:00",
@@ -520,7 +517,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "1562e134-e3b1-47e0-a5cc-2d19610cdeb4"
+      "last_transaction_id": "ac101564-4e71-41be-b7af-eb26d5073be5"
     }
   },
   "nbformat": 4,
