Commit from Noteable
Updating project file cache

--- a/text_VAE_v18.ipynb
+++ b/text_VAE_v18.ipynb
@@ -12,7 +12,10 @@
           "cell_type": "code",
           "output_collection_id": "c8551f76-2e3f-410c-83dc-b4ac882b422d"
         },
-        "ExecuteTime": null
+        "ExecuteTime": {
+          "end_time": "2023-07-01T23:53:36.010429+00:00",
+          "start_time": "2023-07-01T23:52:49.754930+00:00"
+        }
       },
       "execution_count": null,
       "source": "pip install keras tensorflow",
@@ -23,31 +26,15 @@
       "execution_count": null,
       "metadata": {
         "noteable": {
-          "output_collection_id": "3528dcfb-3694-443a-a69c-884097274154"
+          "output_collection_id": "6b29c44c-619b-408f-b005-9e45a5c0db0c"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-01T23:52:13.709761+00:00",
-          "start_time": "2023-07-01T23:52:13.126655+00:00"
+          "end_time": "2023-07-01T23:55:05.093650+00:00",
+          "start_time": "2023-07-01T23:55:04.909698+00:00"
         }
       },
       "outputs": [],
-      "source": [
-        "from keras.layers import Bidirectional, Dense, Embedding, Input, Lambda, LSTM, RepeatVector, TimeDistributed, Layer, Activation, Dropout\n",
-        "from keras.preprocessing.sequence import pad_sequences\n",
-        "from keras.layers.advanced_activations import ELU\n",
-        "from keras.preprocessing.text import Tokenizer\n",
-        "from keras.callbacks import ModelCheckpoint\n",
-        "from keras.optimizers import Adam\n",
-        "from keras import backend as K\n",
-        "from keras.models import Model\n",
-        "from scipy import spatial\n",
-        "import tensorflow as tf\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "import codecs\n",
-        "import csv\n",
-        "import os"
-      ],
+      "source": "from keras.layers import Bidirectional, Dense, Embedding, Input, Lambda, LSTM, RepeatVector, TimeDistributed, Layer, Activation, Dropout\nfrom keras.preprocessing.sequence import pad_sequences\nfrom keras.layers.advanced_activations import ELU\nfrom keras.preprocessing.text import Tokenizer\nfrom keras.callbacks import ModelCheckpoint\nfrom keras.optimizers import Adam\nfrom keras import backend as K\nfrom keras.models import Model\nfrom scipy import spatial\nimport tensorflow as tf\nimport pandas as pd\nimport numpy as np\nimport codecs\nimport csv\nimport os",
       "id": "075440c8"
     },
     {
@@ -517,7 +504,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "ac101564-4e71-41be-b7af-eb26d5073be5"
+      "last_transaction_id": "77b2fa8a-1515-434a-823a-5b8e5552c43b"
     }
   },
   "nbformat": 4,
