Commit from Noteable
Updating project file cache

--- a/text_VAE_v18.ipynb
+++ b/text_VAE_v18.ipynb
@@ -10,15 +10,12 @@
         },
         "noteable": {
           "cell_type": "code",
-          "output_collection_id": "c8551f76-2e3f-410c-83dc-b4ac882b422d"
+          "output_collection_id": "473d3c34-952a-4e22-8972-644108193f18"
         },
-        "ExecuteTime": {
-          "end_time": "2023-07-01T23:53:36.010429+00:00",
-          "start_time": "2023-07-01T23:52:49.754930+00:00"
-        }
+        "ExecuteTime": null
       },
       "execution_count": null,
-      "source": "pip install keras tensorflow",
+      "source": "pip install keras tensorflow keras-preprocessing",
       "outputs": []
     },
     {
@@ -504,7 +501,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "77b2fa8a-1515-434a-823a-5b8e5552c43b"
+      "last_transaction_id": "19c7453d-54f2-48e5-9d51-02b0824aefe8"
     }
   },
   "nbformat": 4,
