Commit from Noteable
Updating project file cache

--- a/text_VAE_v18.ipynb
+++ b/text_VAE_v18.ipynb
@@ -12,7 +12,10 @@
           "cell_type": "code",
           "output_collection_id": "473d3c34-952a-4e22-8972-644108193f18"
         },
-        "ExecuteTime": null
+        "ExecuteTime": {
+          "end_time": "2023-07-01T23:56:57.525472+00:00",
+          "start_time": "2023-07-01T23:56:52.856482+00:00"
+        }
       },
       "execution_count": null,
       "source": "pip install keras tensorflow keras-preprocessing",
@@ -23,15 +26,15 @@
       "execution_count": null,
       "metadata": {
         "noteable": {
-          "output_collection_id": "6b29c44c-619b-408f-b005-9e45a5c0db0c"
+          "output_collection_id": "e30fde09-4104-4645-b822-0e185406b561"
         },
         "ExecuteTime": {
-          "end_time": "2023-07-01T23:55:05.093650+00:00",
-          "start_time": "2023-07-01T23:55:04.909698+00:00"
+          "end_time": "2023-07-01T23:57:50.710312+00:00",
+          "start_time": "2023-07-01T23:57:50.514229+00:00"
         }
       },
       "outputs": [],
-      "source": "from keras.layers import Bidirectional, Dense, Embedding, Input, Lambda, LSTM, RepeatVector, TimeDistributed, Layer, Activation, Dropout\nfrom keras.preprocessing.sequence import pad_sequences\nfrom keras.layers.advanced_activations import ELU\nfrom keras.preprocessing.text import Tokenizer\nfrom keras.callbacks import ModelCheckpoint\nfrom keras.optimizers import Adam\nfrom keras import backend as K\nfrom keras.models import Model\nfrom scipy import spatial\nimport tensorflow as tf\nimport pandas as pd\nimport numpy as np\nimport codecs\nimport csv\nimport os",
+      "source": "from keras.layers import Bidirectional, Dense, Embedding, Input, Lambda, LSTM, RepeatVector, TimeDistributed, Layer, Activation, Dropout\nfrom keras_preprocessing import pad_sequences\nfrom keras.layers.advanced_activations import ELU\nfrom keras.preprocessing.text import Tokenizer\nfrom keras.callbacks import ModelCheckpoint\nfrom keras.optimizers import Adam\nfrom keras import backend as K\nfrom keras.models import Model\nfrom scipy import spatial\nimport tensorflow as tf\nimport pandas as pd\nimport numpy as np\nimport codecs\nimport csv\nimport os",
       "id": "075440c8"
     },
     {
@@ -501,7 +504,7 @@
     },
     "selected_hardware_size": "small",
     "noteable": {
-      "last_transaction_id": "19c7453d-54f2-48e5-9d51-02b0824aefe8"
+      "last_transaction_id": "bace8d07-ed41-4bf2-96a6-ecb6dc266063"
     }
   },
   "nbformat": 4,
